converting server's import controller to typescript
